--- a/restaurantapp/pubspec.yaml
+++ b/restaurantapp/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   provider: ^6.0.3
   authentication: ^0.0.1
   flutter_login: ^4.0.0
+  firebase_analytics: ^9.3.0
+  firebase_dynamic_links: ^4.3.3
+  firebase_database: ^9.1.0
+  cloud_firestore: ^3.4.3
 
 dev_dependencies:
   flutter_test:
